Part 2 and 3: create edit people, notes
