# models.py
@@ -1,5 +1,22 @@
 from datetime import datetime
-from config import db
+from config import db, ma
+from marshmallow_sqlalchemy import fields
+
+class Note(db.Model):
+    __tablename__ = "note"
+    id = db.Column(db.Integer, primary_key=True)
+    person_id = db.Column(db.Integer, db.ForeignKey("person.id"))
+    content = db.Column(db.String, nullable=False)
+    timestamp = db.Column(
+        db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow
+    )
+
+class NoteSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Note
+        load_instance = True
+        sqla_session = db.session
+        include_fk = True
 
 class Person(db.Model):
     __tablename__ = "person"
@@ -9,3 +26,23 @@ class Person(db.Model):
     timestamp = db.Column(
         db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow
     )
+    notes = db.relationship(
+        Note,
+        backref="person",
+        cascade="all, delete, delete-orphan",
+        single_parent = True,
+        order_by = "desc(Note.timestamp)"
+    )
+
+class PersonSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Person
+        load_instance = True
+        sqla_session = db.session
+        include_relationships = True
+    
+    notes = fields.Nested(NoteSchema, many=True)
+
+person_schema = PersonSchema()
+people_schema = PersonSchema(many=True)
+note_schema = NoteSchema()
